Word wrap list headings that are too long. Caused 2x issues w/ Greek lang

--- a/frontend/app/less/lists.less
+++ b/frontend/app/less/lists.less
@@ -27,6 +27,7 @@
           font-size : 15px;
           font-weight: 300;
           text-decoration: none;
+          word-wrap: break-word;
 
           &.sortable {
             cursor: pointer;
